# ImageViwer_OpenCV

./: .gitignore  CMakeLists.txt  README.md  airphoto_viewer  build.sh  commit_and_push.md  function_level_roadmap.md  how_to_collaborate.md  msa_development_roadmap.md  pyproject.toml  requirements.md  run_viewer.py  task_breakdown.md  규칙.md  프롬프트.md
cmake/macOS/: Info.plist.in
docs/: measurement_tool.md
examples/: CMakeLists.txt  MeasurementExample.qml  README.md  main.qml  measurement_example.cpp
include/airphoto_viewer/: ImageData.hpp  ImageMetadata.hpp  MeasurementOverlay.hpp  MeasurementPlugin.hpp  MeasurementTool.hpp
include/airphoto_viewer/core/: image_loader.h  tile.h  tile_cache.h
include/airphoto_viewer/ui/: main_window.h  tile_view.h
qml/: MeasurementOverlay.qml  MeasurementTool.qml  qmldir
scripts/: create_test_image.py  test_image_loading.py
src/: main.cpp
src/airphoto_viewer/: __init__.py
src/airphoto_viewer/core/: __init__.py
src/airphoto_viewer/core/image/: __init__.py  image_data.py
src/airphoto_viewer/core/render/: __init__.py  viewer_engine.py
src/airphoto_viewer/core/tile/: __init__.py
src/airphoto_viewer/utils/: __init__.py
src/core/: ImageData.cpp  ImageMetadata.cpp  image_loader.cpp  tile.cpp  tile_cache.cpp
src/tools/: MeasurementOverlay.cpp  MeasurementPlugin.cpp  MeasurementTool.cpp
src/ui/: main_window.cpp  tile_view.cpp
test/: test_main_window.cpp  test_metadata.cpp  test_metadata_simple.cpp  test_tiff_loader.cpp
